Fixes stupid intercom overlap

--- a/client/app/main/material.css
+++ b/client/app/main/material.css
@@ -204,7 +204,7 @@ md-sidenav.md-sidenav-right ul {
 .splash-design-buttons {
   top: auto;
   left: auto;
-  right: 70px;
+  right: 85px;
   bottom: 20px;
   position: fixed;
 }
